[package]
name = "pijoything"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.13.1"
serde = {version = "*", features = ["derive"]}
evdev = "*"
lazy_static = "*"
signal = "*"
toml = "*"
structopt = "*"